--- a/SPRING/TFG-Patrones/pom.xml
+++ b/SPRING/TFG-Patrones/pom.xml
@@ -48,14 +48,14 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
+			<artifactId>spring-boot-starter-cuestionario</artifactId>
+			<scope>cuestionario</scope>
 		</dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
             <version>5.7.0</version>
-            <scope>test</scope>
+            <scope>cuestionario</scope>
         </dependency>
     </dependencies>
 
