--- a/SPRING/TFG-Patrones/src/main/resources/application.properties
+++ b/SPRING/TFG-Patrones/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 server.port=8090
 spring.data.mongodb.database=pruebas
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.SecurityAutoConfiguration
+spring.security.user.name=admin
+spring.security.user.password=1234
